--- a/clientsrc/src/assets/_variables.scss
+++ b/clientsrc/src/assets/_variables.scss
@@ -1,6 +1,6 @@
-$body-bg: #ff00f2;
+$body-bg: #f3f0f0;
 
-$primary: #004b44;
+$primary: #004b43;
 $secondary: #06ad00;
 $danger: #bcb2eb;
 $success: #c77121;
